# tabular-robustness

./: LICENSE  README.md  pyproject.toml
tabreasbench/: __init__.py  aggregate_evaluation_results.py  cli.py  evaluate_benchmark_results.py  run_benchmark.py  run_full_benchmark.py
tabreasbench/data/scaledDB/128k/airline/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  6.sqlite  7.sqlite  8.sqlite  9.sqlite
tabreasbench/data/scaledDB/128k/cookbook/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  6.sqlite  7.sqlite  8.sqlite  9.sqlite
tabreasbench/data/scaledDB/128k/food_facility_inspections/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  6.sqlite  7.sqlite  8.sqlite  9.sqlite
tabreasbench/data/scaledDB/128k/food_inspection/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  6.sqlite  7.sqlite  8.sqlite  9.sqlite
tabreasbench/data/scaledDB/128k/global_biodiversity/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  6.sqlite  7.sqlite  8.sqlite  9.sqlite
tabreasbench/data/scaledDB/128k/movie/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  6.sqlite  7.sqlite  8.sqlite  9.sqlite
tabreasbench/data/scaledDB/128k/music_tracker/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  6.sqlite  7.sqlite  8.sqlite  9.sqlite
tabreasbench/data/scaledDB/128k/restaurant/: 0.sqlite  1.sqlite  2.sqlite  3.sqlite  4.sqlite  5.sqlite  (+4 more)
tabreasbench/src/: __init__.py  llm_interface.py
tabreasbench/src/base/: base.py
tabreasbench/src/missing/: missing.py
tabreasbench/src/shuffle/: shuffle.py
(+820 files in other folders)
